deploy/echoapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoapp
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "echoapp"
        dapr.io/app-port: "3000"
        dapr.io/config: "pipeline"
        dapr.io/sidecar-listen-addresses: "0.0.0.0"
    spec:
      containers:
      - name: echo
        image: dapriosamples/middleware-echoapp:latest # TODO - build and push this image to ACR
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
